PromoCalculator/buildLog.log
g++ -fpermissive -g -w -std=c++11 -Wall -Lc:\mingw\lib -Ic:\mingw\include -D_WIN32_WINNT=0x0601 -DWINVER=0x0601 -DMSVCRT_VERSION=710   -c -o main.o main.cpp
main.cpp: In function 'void DoUpdateSvcDacl()':
main.cpp:699:23: error: cannot convert '_SECURITY_DESCRIPTOR**' to 'PSECURITY_DESCRIPTOR {aka _SECURITY_DESCRIPTOR*}' for argument '3' to 'BOOL QueryServiceObjectSecurity(SC_HANDLE, SECURITY_INFORMATION, PSECURITY_DESCRIPTOR, DWORD, LPDWORD)'
         &dwBytesNeeded))
                       ^
main.cpp: In function 'BOOL StopDependentServices()':
main.cpp:1020:17: error: expected 'catch' before '__finally'
                 __finally 
                 ^
main.cpp:1020:17: error: expected '(' before '__finally'
main.cpp:1020:17: error: expected type-specifier before '__finally'
main.cpp:1021:17: error: expected ')' before '{' token
                 {
                 ^
main.cpp:1027:9: error: expected 'catch' before '__finally'
         __finally 
         ^
main.cpp:1027:9: error: expected '(' before '__finally'
main.cpp:1027:9: error: expected type-specifier before '__finally'
main.cpp:1028:9: error: expected ')' before '{' token
         {
         ^
make: *** [main.o] Error 1
